# tt-zephyr-platforms

./: .clang-format  .gitignore  .gitlab-ci.yml  MAINTAINERS.yml  VERSION  test.py  tt-console  west.yml
.github/: Dockerfile  ci_boards.json  copilot-instructions.md
.github/actions/power-telemetry-subtest/: action.yml
.github/workflows/: build-fw.yml  build-native.yml  docs.yml  hardware-long.yml  hardware-smoke.yml  metal.yml  produce-data.yml  publish-tensix-disable.yml  release.yml  run-unit-tests.yml  workload-telemetry.yml
.github/workflows/prepare-zephyr/: action.yml
app/dm_test_app/: nucleo_u385rg_q.overlay  prj.conf
app/dm_test_app/src/: main.c
app/dmc/: VERSION  prj.conf  sample.yaml
app/dmc/boards/: dmc_common.dtsi  native_sim.conf  native_sim.overlay  nucleo_u385rg_q.conf  nucleo_u385rg_q.overlay  tt_blackhole_tt_blackhole_dmc.conf
app/dmc/src/: main.c
app/smc/: CMakeLists.txt  VERSION  prj.conf  sample.yaml
app/smc/pytest/: e2e_chartest.py  e2e_smoke.py  e2e_stress.py
app/smc/src/: main.c
app/wh/pytest/: e2e_smoke.py
boards/tenstorrent/tt_blackhole/: CMakeLists.txt  tt_blackhole_fixed_partitions.dtsi  tt_blackhole_tt_blackhole_smc.dts
boards/tenstorrent/tt_blackhole/doc/: index.rst
boards/tenstorrent/tt_blackhole/spirom_data_tables/GALAXY/: fw_table.txt
boards/tenstorrent/tt_blackhole/spirom_data_tables/GALAXY_REVC/: fw_table.txt
boards/tenstorrent/tt_blackhole/spirom_data_tables/ORION_SLT/: fw_table.txt
boards/tenstorrent/tt_blackhole/spirom_data_tables/P100/: fw_table.txt
boards/tenstorrent/tt_blackhole/spirom_data_tables/P100A/: fw_table.txt
boards/tenstorrent/tt_grendel_mk_bu_dmc/: tt_grendel_mk_bu_dmc.dts
doc/: conf.py  requirements.txt
doc/develop/getting_started/: index.rst
doc/develop/guides/: compatibility.rst  index.rst
doc/release/: migration-guide-19.10.md  migration-guide-19.11.md  migration-guide-19.12.md  migration-guide-19.13.md  release-notes-19.10.md  release-notes-19.11.md  release-notes-19.12.md  release-notes-19.13.md
doc/services/: index.rst
doc/services/kmd_logging/: index.rst
doc/services/pldm/: index.rst
doc/services/runtime_telemetry/: index.rst
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: clock_control_emul.c  clock_control_tt_bh.c  clock_control_tt_grendel.c
drivers/dma/: CMakeLists.txt  dma_arc_hs.c  dma_tt_bh_noc.c  dma_tt_grendel_smc.c
drivers/mbox/: mbox_tt_grendel.c
drivers/misc/: CMakeLists.txt  Kconfig
drivers/misc/bh_efuse/: CMakeLists.txt  Kconfig  bh_efuse.c  bh_efuse_emul.c
drivers/misc/bh_fwtable/: CMakeLists.txt  Kconfig  bh_fwtable.c  ccfgovr.h
drivers/misc/bh_fwtable/spirom_protobufs/: fw_table.proto  fw_table_override.proto
drivers/misc/tt_smc_remoteproc/: tt_smc_remoteproc.c
drivers/pmci/: CMakeLists.txt  Kconfig
drivers/pmci/pldm/: CMakeLists.txt  Kconfig  pldm_pdr.c  pldm_pdr.h
drivers/reset/: reset_tt_bh.c
drivers/sensor/tenstorrent/: CMakeLists.txt  Kconfig
drivers/sensor/tenstorrent/bh_arc_telem/: CMakeLists.txt  Kconfig  bh_arc_telem.c
drivers/sensor/tenstorrent/pvt/: CMakeLists.txt  Kconfig  pvt_tt_bh.c  pvt_tt_bh_emul.c
drivers/serial/: uart_tt_virt.c
dts/bindings/misc/: tenstorrent,bh-efuse-emul.yaml  tenstorrent,bh-efuse.yaml  tenstorrent,pldm-numeric-sensor.yaml  tenstorrent,pldm-pdr.yaml  tenstorrent,smc-remoteproc.yaml
dts/bindings/pinctrl/: tenstorrent,bh-pinctrl.yaml
dts/bindings/sensor/: tenstorrent,bh-arc-telemetry.yaml  tenstorrent,bh-pvt-emul.yaml  tenstorrent,dummy-sensor-emul.yaml
include/tenstorrent/: bh_arc.h  bh_chip.h  jtag_bootrom.h  msgqueue.h  smbus_target.h  smc_msg.h  sys_init_defines.h  tt_smbus_regs.h
include/zephyr/drivers/dma/: dma_tt_bh_noc.h
include/zephyr/drivers/misc/: bh_efuse.h  bh_fwtable.h
include/zephyr/dt-bindings/pinctrl/: tt_blackhole_smc-pinctrl.h
lib/tenstorrent/bh_arc/: CMakeLists.txt  Kconfig  Kconfig.tt_pcie_log  aiclk_ppm.c  aiclk_ppm.h  avs.c  cat.c  cat.h  chip_info.h  chip_info_fwtable.c  chip_info_static.c  cm2dm_msg.c  cm2dm_msg.h  dvfs.c  dw_apb_i2c.c  dw_apb_i2c.h  eth.c  fan_ctrl.c  functional_efuse.c  gddr.c  gddr.h  harvesting.c  harvesting.h  i2c_messages.c  init.c  init.h  msgqueue.c  noc2axi.c  noc_init.c  pcie.c  pcie.h  pcie_msi.c  reg.h  reg_stub.c  regulator.c  regulator.h  regulator_config.c  reset.c  runtime_telemetry.c  serdes_eth.c  (+15 more)
lib/tenstorrent/bh_chip/: bh_chip.c  strapping.c
lib/tenstorrent/boot_fs/: Kconfig  tt_boot_fs.c
lib/tenstorrent/jtag_bootrom/: jtag_bootrom.c
scripts/: build-combined-fwbundle.sh  check_sysfw_compliance.py  dmc_reset.py  dump_smc_state.py  encode_spirom_bins.py  generate-release-docs.py  read_telemetry.py  requirements.txt  rev2board.sh  smc_console.py  throttler_data_collection.py  tt_boot_fs.py  tt_bootstrap.py
scripts/ci/: create_pipeline_json.py  pydantic_models.py  run-e2e.sh  run-smoke.sh  run-stress.sh
scripts/tooling/: Makefile  tt-console
scripts/tooling/blackhole_recovery/: Dockerfile  Dockerfile.wormhole  recover-blackhole.py  recover-blackhole.sh
scripts/tooling/blackhole_recovery/data/bh_flm/: CMakeLists.txt
soc/tenstorrent/tt_blackhole/: CMakeLists.txt  Kconfig  pinctrl_bh.c  pinctrl_soc.h
tests/drivers/fw_table/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/drivers/fw_table/src/: main.c
tests/drivers/pmci/pldm_pdr/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/sensors/bh_arc_telem/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/sensors/bh_arc_telem/boards/: native_sim.overlay
tests/drivers/sensors/bh_arc_telem/src/: main.c
tests/lib/tenstorrent/bh_arc/: CMakeLists.txt  app.overlay  flash_spec.yaml  prj.conf
tests/lib/tenstorrent/bh_arc/src/: cat.c  fan_ctrl.c  msgqueue.c  smbus_target.c
tests/lib/tenstorrent/bh_fwtable/: CMakeLists.txt  flash_spec.yaml  prj.conf  testcase.yaml
tests/lib/tenstorrent/bh_fwtable/boards/: native_sim.overlay
tests/lib/tenstorrent/bh_fwtable/src/: main.c
tests/lib/tenstorrent/chip_info/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/tenstorrent/chip_info/src/: main.c
zephyr/: module.yml
(+24 files in other folders)
